\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
%% some pre-defined commands: \R, \code, \acronym, \url, \file, \pkg

\name{NEWS}
\title{News for Package 'surveillance'}
\encoding{latin1}



\section{Changes in surveillance version 1.6-0 (2013-07-04)}{

\subsection{SYNOPSIS}{
  \itemize{
    \item The \code{polyCub}-methods for cubature over polygonal domains
    have been moved to the new dedicated package \CRANpkg{polyCub},
    since they are of a rather general use. The \code{discpoly} function
    has also been moved to that package.

    \item As a replacement of the license-restricted \pkg{gpclib} package,
    the \pkg{rgeos} package may now be used in generating
    \code{"epidataCS"} (polygon intersections, slightly slower).
    This is also the default (\code{surveillance.options(gpclib=FALSE)}).

    \item The improved Farrington method described in Noufaily et al.
    (2012) is now available as \code{farringtonFlexible()}.
    
    \item To make the different retrospective modelling frameworks of
    the \pkg{surveillance} package jointly applicable, it is now possible
    to convert (aggregate) \code{"epidataCS"} 
    (continuous-time continuous-space data) into an \code{"sts"} object
    (multivariate time series of counts) by the new function
    \code{epidataCS2sts}.

    \item Simulation from \code{hhh4} models (class \code{"ah4"}) has
    been re-implemented, which fixes a bug and makes it more flexible
    and compatible with a wider class of models.

    \item The \code{map}-slot of the \code{"sts"} class now requires
    \code{"SpatialPolygons"} (only) instead of
    \code{"SpatialPolygonsDataFrame"}.
    
    \item Some further new features, minor changes, and bug fixes are
    described in the following subsections.
  }
}

\subsection{NEW FEATURES}{
  \itemize{
    \item The \code{untie} methods are now able to produce jittered points
    with a required minimum separation (\code{minsep}).
